// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "/";
option java_multiple_files = true;
option java_package = "work.suvvm.toad_ocr_engine";
option java_outer_classname = "ToadOcrProto";

package idl;

// The greeting service definition.
service ToadOcr {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Predict (PredictRequest) returns (PredictReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string app_id = 1;
  string basic_token = 2;
  string name = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message PredictRequest {
  string app_id = 1;
  string basic_token = 2;
  string net_flag = 3;
  bytes image = 4;
}

message PredictReply {
  int32 code = 1;
  string message = 2;
  string label = 3;
}
